tests/enum_into/compile_fail/field/missing_annotation_for_tuple_to_struct.stderr
error: Missing required mapping to named field for Target::Struct
 --> tests/enum_into/compile_fail/field/missing_annotation_for_tuple_to_struct.rs:9:9
  |
9 |         i32,
  |         ^^^
